force-app/main/default/objects/AI_Resolution_Log__c/AI_Resolution_Log__c.object-meta.xml
<CustomObject>
    <label>AI Resolution Log</label>
    <nameField>
        <displayFormat>AIL-{0000}</displayFormat>
        <label>AI Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Resolution Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>