force-app/main/default/objects/AI_Resolution_Log__c/fields/AI_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Name__c</fullName>
    <label>AI Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>