force-app/main/default/objects/AI_Resolution_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Resolution Logs</relationshipLabel>
    <relationshipName>AI_Resolution_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>