force-app/main/default/objects/AI_Resolution_Log__c/fields/Created_By_AI__c.field-meta.xml
<CustomField>
    <fullName>Created_By_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By AI</label>
    <type>Checkbox</type>
</CustomField>