force-app/main/default/objects/AI_Resolution_Log__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <type>TextArea</type>
</CustomField>