force-app/main/default/objects/AI_Resolution_Log__c/fields/Response_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Seconds__c</fullName>
    <label>Response Time Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>